src/main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: default
spec:
  selector:
    app: spark-app
  type: NodePort
  ports:
  - name: spark-app
    port: 80
    targetPort: 80
